--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "@types/canvas-confetti": "^1.6.4",
+    "canvas-confetti": "^1.9.3",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
